--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "3.2.0",
     "html-webpack-plugin": "4",
+    "style-loader": "1.0.1",
     "webpack": "4",
     "webpack-cli": "3"
   }
