--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && npx webpack",
+    "build": "rimraf dist && npx webpack --config webpack.config-prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server"
   },
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "3.2.0",
     "html-webpack-plugin": "4",
+    "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.1",
     "webpack": "4",
     "webpack-cli": "3",
